# captain

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json
assets/: tailwind.css
src/: main.rs
