[package]
name = "captain"
version = "0.1.0"
authors = ["Adam Kowalski <adam.kowalski.work@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["clock"] }
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-free-icons = { version = "0.9.0", features = ["hero-icons-solid"] }

[target.'cfg(platform = "mobile")'.dependencies]
dioxus = { version = "0.6.0", features = ["router", "mobile"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
